QA
Some improvements but can't make the singular builder.default to work.
Not sure how to exclude org.geonetwork.search.ogcapi.records.generated
for spotbugs.